kubernetes/apps/media/navidrome/app/httproute-rest.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome-rest
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - navidrome.noms.tv
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /rest/
      backendRefs:
        - name: navidrome-app
          port: 80
