kubernetes/apps/media/navidrome/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_securitypolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: navidrome-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: navidrome-app
  extAuth:
    http:
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentication
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - x-authentik-username
        - x-authentik-groups
        - x-authentik-email
        - x-authentik-name
        - x-authentik-uid
